--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,6 @@ buildscript {
     }
 }
 
-group 'br.ufs'
-version '1.0-SNAPSHOT'
-
 apply plugin: 'kotlin'
 
 repositories {
@@ -27,7 +24,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.8.0'
-
+    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
 }
 
 compileKotlin {
