--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'com.github.perwendel:spark-kotlin:master'
+    implementation 'com.github.ubiratansoares:spark-kotlin:-SNAPSHOT'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
     implementation 'com.github.salomonbrys.kodein:kodein:4.1.0'
