--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     working_directory: ~/kryptokarteira-backend
 
     docker:
-      - image: circleci/8-jdk-node-browsers
+      - image: circleci/openjdk:8-jdk-node-browsers
 
     steps:
       - checkout
