--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
 
       - run:
           name: Install apidoc
-          command: npm install apidoc -g
+          command: 'sudo npm install apidoc -g'
 
       - run:
           name: Perform build
