--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'com.github.salomonbrys.kodein:kodein:4.1.0'
     implementation 'org.slf4j:slf4j-simple:1.7.21'
     implementation 'com.google.guava:guava:23.0'
+    implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.8.0'
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
