--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,42 @@ buildscript {
 
     repositories {
         mavenCentral()
+        jcenter()
     }
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.2'
+
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
+}
 
+
+mainClassName = 'br.ufs.kryptokarteira.backend.LauncherKt'
+
+jar {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+}
+
+shadowJar {
+    baseName = 'kryptokarteira-fatjar'
+    classifier = null
+    version = 'SNAPSHOT'
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.github.ubiratansoares:spark-kotlin:-SNAPSHOT'
