--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ shadowJar {
     version = 'SNAPSHOT'
 }
 
+task stage(dependsOn: ['clean', 'shadowJar'])
+shadowJar.mustRunAfter clean
+stage.dependsOn(shadowJar)
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
